--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
 body {
     background-color: #EFE5DC;
-    /* padding: 0 24px 0 24px;
-    margin: 16px 0 16px 0;
+    padding: 0 10px;
+    margin: 10px 0 0 0;
 }
+
+img.logo {
+    border-radius: 50%;
+}
+
+nav a {
+    color: black !important;
+}
+
+
+
 
