--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-body {
+ body{
     background-color: #EFE5DC;
-    padding: 0 10px;
-    margin: 10px 0 0 0;
+    /* padding: 0 10px; */
+    /* margin: 10px 0 0 0; */
 }
 
+section {
+    min-height: 100vh;
+}
 img.logo {
     border-radius: 50%;
 }
@@ -13,6 +16,70 @@ nav a {
     color: black !important;
 }
 
+nav a:hover{
+    color: blueviolet !important;
+}
 
+.lead {
+    line-height: 1.5rem !important;
+}
 
+.col-6 a{
+    color: black;
+}
 
+footer.row {
+ background-color: #DDBEA9 !important;
+}
+
+.col-6, col{
+    /* margin-top: 60px !important; */
+}
+
+.bgimg{
+    background-image: url(./images/backgr.jpg);
+    position: relative;
+    background-size: cover;
+    height: 100vh;
+    width: auto;
+    /* filter: blur(3px); */
+    /* -webkit-filter: blur(3px); */
+    /* background-position: center; */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+.bgtext{
+    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.4);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    border:3px solid rgb(224, 193, 154);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
+
+.container.overlay {
+backdrop-filter: blur(3px);
+-webkit-filter
+}
+
+h1{
+    text-align: center;
+}
+
+.grid-container{
+    grid-template-columns: auto auto;
+    display: grid;
+    gap: 10px;
+}
+
+.grid-items {
+    border-radius: 40%;
+}
