--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Quicksand&display=swap');
+
  body{
     background-color: #EFE5DC;
     /* padding: 0 10px; */
@@ -13,7 +14,7 @@ img.logo {
 }
 
 nav a {
-    color: black !important;
+    color: rgb(168, 161, 161) !important;
 }
 
 nav a:hover{
@@ -32,9 +33,7 @@ footer.row {
  background-color: #DDBEA9 !important;
 }
 
-.col-6, col{
-    /* margin-top: 60px !important; */
-}
+
 
 .bgimg{
     background-image: url(./images/backgr.jpg);
@@ -42,9 +41,6 @@ footer.row {
     background-size: cover;
     height: 100vh;
     width: auto;
-    /* filter: blur(3px); */
-    /* -webkit-filter: blur(3px); */
-    /* background-position: center; */
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -53,14 +49,14 @@ footer.row {
     background-color: rgb(0, 0, 0);
     background-color: rgb(0, 0, 0, 0.4);
     color: rgb(255, 255, 255);
-    font-weight: bold;
-    border:3px solid rgb(224, 193, 154);
+    font-weight: ;
+    border: 1px solid rgb(224, 193, 154);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
+    /* z-index: 2; */
+    /* width: 80%; */
     padding: 20px;
     text-align: center;
 }
@@ -72,6 +68,8 @@ backdrop-filter: blur(3px);
 
 h1{
     text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .grid-container{
@@ -82,4 +80,21 @@ h1{
 
 .grid-items {
     border-radius: 40%;
+}
+
+.col-lg-6.col-md-6.col-sm-6.col-xs-6.hero-text {
+    margin-left: 60px;
+}
+
+img.me {
+    margin-bottom: 60px;
+}
+
+.container.text.center {
+    vertical-align: center;
+}
+
+.bkgrimg {
+    background-image: url(./images/blk\ lc.png);
+    height: 100vh;
 }
