--- a/assets/style.css
+++ b/assets/style.css
@@ -98,3 +98,21 @@ img.me {
     background-image: url(./images/blk\ lc.png);
     height: 100vh;
 }
+
+.d-block{
+    object-fit: contain;
+    max-height: 400px;
+    max-width: auto;
+    /* margin:auto; */
+    border-radius: 10px;
+    box-shadow: 4px;
+}
+
+.d-block.p{
+    text-align: right;
+}
+
+.col-md-8 {
+    justify-content: center;
+}
+.container
