--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,21 @@
     
 }
 
+html,
+body{
+    overflow-x: hidden;
+}
+
 
  body{
     background-color: #EFE5DC;
     overflow-x: hidden;
     /* padding: 0 10px; */
     /* margin: 10px 0 0 0; */
+}
+
+.gx-5{
+    
 }
 
 section {
@@ -104,7 +113,7 @@ h1{
 }
 
 .col-lg-6.col-md-6.col-sm-6.col-xs-6.hero-text {
-    margin-left: 60px;
+
 }
 
 img.me {
@@ -140,6 +149,8 @@ img.me {
 .img-hover-zoom {
     height: 200px;
     overflow: hidden;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .img-hover-zoom img {
@@ -149,6 +160,14 @@ img.me {
 .img-hover-zoom:hover img {
     transform: scale(1.5);
     opacity: 0.5;
+}
+
+.typing{
+    margin-bottom:1rem;
+}
+
+.lang.rounded {
+    margin-bottom: 10px !important;
 }
 
 .carousel-caption p, h3 {
@@ -191,8 +210,10 @@ img.me {
       
   @keyframes blink {
     50% {
-      border-color: transparent
+      border-color: transparent 
     }
   } */
 
-.img-
+@media screen {
+    
+}
