--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400;1,500&family=Roboto+Mono:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Roboto+Mono:wght@100&display=swap');
 
 *{
     padding: 0;
@@ -10,6 +14,10 @@
 html,
 body{
     overflow-x: hidden;
+    font-family: 'Castoro Titling', cursive;
+    font-family: 'Quicksand', sans-serif;
+    /* font-family:'Roboto Mono', monospace !important; */
+    font-size: large;
 }
 
 
@@ -20,13 +28,11 @@ body{
     /* margin: 10px 0 0 0; */
 }
 
-.gx-5{
-    
-}
 
 section {
     min-height: 100vh;
 }
+
 img.logo {
     border-radius: 50%;
 }
@@ -89,6 +95,11 @@ div.col-6 {
     /* width: 80%; */
     padding: 20px;
     text-align: center;
+    
+    font-weight: 400;
+}
+h4 {
+    font-family:'Roboto Mono', monospace !important;
 }
 
 .container.overlay {
@@ -99,6 +110,28 @@ h1{
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
+    /* font-family: 'Monoton', cursive; */
+    font-family: 'Libre Baskerville', serif;
+/* font-family: 'Roboto Mono', monospace; */
+    /* font-family: 'Playfair Display', serif; */
+    font-style: italic;
+    color: #947b6a;
+/* font-family: 'Roboto Mono', monospace; */
+    /* font-family:'Roboto Mono', monospace !important; */
+    font-weight: 700;
+    text-shadow: 2px 2px 4px grey;
+}
+
+h2, h1 {
+    font-family: 'Libre Baskerville', serif;
+    font-weight: 700;
+    color: #b38769;
+    text-shadow: 2px 2px 4px grey;
+
+}
+
+h5 {
+    /* font-family: 'Libre Baskerville', serif; */
 }
 
 .grid-container{
@@ -188,32 +221,10 @@ img.me {
     transform: translate(-50%, -50%);
 }
 
-/* .wrapper {
-    
-}
-
-.typing-demo {
-  width: 22ch;
-  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid;
-  font-family: monospace;
-  font-size: 2em;
-}
-
- @keyframes typing {
-    from {
-      width: 0
+@media only screen and (max-width: 425px){
+    .container-fluid.d-flex.justify-content-center.align-items-center {
+        d-flex:none;
     }
-  }
-      
-  @keyframes blink {
-    50% {
-      border-color: transparent 
-    }
-  } */
-
-@media screen {
-    
 }
+
+&COPY;{}
