--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@ h4 {
 }
 
 .container.overlay {
-backdrop-filter: blur(3px);
+backdrop-filter: blur(5px);
 }
 
 h1{
@@ -208,23 +208,13 @@ img.me {
     color: white;
 }
 
-.col-lg-4.Hobbies {
-    color: white;
-    position:relative;
+.col-lg-4 {
+    position: relative;
     text-align: center;
+    color: white;
+      
 }
 
-.Hobbies {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
-@media only screen and (max-width: 425px){
-    .container-fluid.d-flex.justify-content-center.align-items-center {
-        d-flex:none;
-    }
-}
 
 &COPY;{}
