--- a/assets/style.css
+++ b/assets/style.css
@@ -114,7 +114,7 @@ h1{
     font-family: 'Libre Baskerville', serif;
 /* font-family: 'Roboto Mono', monospace; */
     /* font-family: 'Playfair Display', serif; */
-    font-style: italic;
+    /* font-style: italic; */
     color: #947b6a;
 /* font-family: 'Roboto Mono', monospace; */
     /* font-family:'Roboto Mono', monospace !important; */
@@ -196,7 +196,7 @@ img.me {
 }
 
 .typing{
-    margin-bottom:1rem;
+    /* margin-bottom:1rem; */
 }
 
 .lang.rounded {
@@ -207,14 +207,17 @@ img.me {
     text-shadow: 5px 5px 8px black;
     color: white;
 }
-
-.col-lg-4 {
+/* 
+.img.hobbies.rounded-3 {
     position: relative;
     text-align: center;
     color: white;
       
 }
 
-
-
-&COPY;{}
+.text {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
